--- a/.github/workflows/update_mibgas_data.yml
+++ b/.github/workflows/update_mibgas_data.yml
@@ -20,10 +20,11 @@ jobs:
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@latest
 
-      - name: Configurar Python 3.9
+      - name: Configurar Python 3.12
         uses: actions/setup-python@v5
         with:
-          python-version: 3.9
+          python-version: '3.12'
+
 
       - name: Instalar dependências
         run: |
