Refactor MIBGAS update workflow steps
Updated workflow steps for MIBGAS data update, including renaming steps and adding Git LFS installation.

--- a/.github/workflows/update_mibgas_data.yml
+++ b/.github/workflows/update_mibgas_data.yml
@@ -21,60 +21,71 @@ jobs:
         with:
           python-version: '3.11'
 
-      # NOVO: O seu script usa Selenium, que precisa de um navegador. Este passo instala o Chrome.
-      - name: Instalar o navegador Chrome
+      - name: Instalar Chrome
         uses: browser-actions/setup-chrome@latest
 
-      - name: Cache das dependências Python
+      - name: Cache dependências Python
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements_atualizacao_gas_MIBGAS.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      
+
       - name: Instalar dependências Python
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_atualizacao_gas_MIBGAS.txt
-      
-      - name: Executar script de atualização de dados com logging
+
+      - name: Executar script de atualização com logging
         run: |
           mkdir -p logs
           start_time=$(date +%s)
-          echo "=== Execução Python iniciada em $(date -d @$start_time '+%Y-%m-%d %H:%M:%S') ===" >> logs/update_mibgas_data.log
-          
+          echo "=== Execução iniciada: $(date -d @$start_time '+%Y-%m-%d %H:%M:%S') ===" >> logs/update_mibgas_data.log
+
           python scripts/update_mibgas_data.py >> logs/update_mibgas_data.log 2>&1
-          
+
           end_time=$(date +%s)
-          echo "=== Execução terminada em $(date -d @$end_time '+%Y-%m-%d %H:%M:%S') ===" >> logs/update_mibgas_data.log
-          runtime=$((end_time-start_time))
-          echo "Duração total: ${runtime} segundos." >> logs/update_mibgas_data.log
+          echo "=== Execução terminada: $(date -d @$end_time '+%Y-%m-%d %H:%M:%S') ===" >> logs/update_mibgas_data.log
+          echo "Duração: $((end_time-start_time)) segundos" >> logs/update_mibgas_data.log
           echo "" >> logs/update_mibgas_data.log
 
-      - name: Fazer upload do log como artefacto
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: log_atualizacao_gas_MIBGAS
-          path: logs/update_mibgas_data.log
-
-      - name: Verificar se houve alterações
+      - name: Verificar alterações
         id: git-check
         run: |
-          # Adicionar todas as alterações (ficheiro Excel E ficheiro de log)
           git add -A
-          if git diff --cached --quiet;
-          then
+          if git diff --cached --quiet; then
             echo "changes=false" >> $GITHUB_OUTPUT
           else
             echo "changes=true" >> $GITHUB_OUTPUT
           fi
 
-      - name: Commit e push se houver alterações
+      - name: Commit e push para GitHub
         if: steps.git-check.outputs.changes == 'true'
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git commit -m "🔥 Dados MIBGAS atualizados automaticamente"
+          git commit -m "🔥 MIBGAS atualizado automaticamente"
           git push
+
+      - name: Instalar Git LFS
+        if: steps.git-check.outputs.changes == 'true'
+        run: |
+          sudo apt-get update
+          sudo apt-get install git-lfs
+          git lfs install
+
+      - name: Push automático para Hugging Face
+        if: steps.git-check.outputs.changes == 'true'
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          git remote add hf https://user:$HF_TOKEN@huggingface.co/spaces/tiagofelicia/simulador-tarifarios-gas-natural
+          git push hf main
+
+      - name: Upload do log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: log_atualizacao_gas_MIBGAS
+          path: logs/update_mibgas_data.log
